objects/Confi_OBJ2__c.object
<CustomObject>
    <description>Modify test for ci job</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>123</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confi OBJ1</label>
        <referenceTo>Confi_OBJ1__c</referenceTo>
        <relationshipLabel>Confi OBJ2</relationshipLabel>
        <relationshipName>Confi_OBJ2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Confi OBJ2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>lookup__c</columns>
        <columns>Email__c</columns>
        <columns>Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Confi OBJ2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Confi OBJ2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>